[package]
name = "enject"
version = "0.0.1"
description = "juice injector"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.17" }
napi-derive = "2.16.13"
windows =  { version = "0.59.*", features = [
       "Win32_System_SystemServices",
       "Win32_UI_WindowsAndMessaging"
], default-features = false }

[build-dependencies]
napi-build = "2.2.1"
